--- a/templates/activate.html
+++ b/templates/activate.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 
+<link rel="stylesheet" href="/static/stylesheets/sky-forms.css">
+<link rel="stylesheet" href="/static/stylesheets/sky-forms-blue.css">
+<link rel="stylesheet" href="/static/stylesheets/jquery-ui.min.css">
+
 <link rel="stylesheet" href="/static/stylesheets/faq.css">
 
     <div class="breadcrumbs-v2 faq-breadcrumb margin-bottom-20">
@@ -21,78 +25,106 @@
             	Thank you for activating your account. Start saving time - create and automate your first task now.
             	<br>
             	<br>
-            	<form class="form-horizontal well" method="post" id="form" enctype="multipart/form-data" action="/task_list">
+            	<form class="sky-form" method="post" id="form" enctype="multipart/form-data" action="/task_list">
+					<header>Add New Task</header>
 			        <fieldset>
-			          <legend>Add New Task</legend>
-
-			          <div class="form-group info">
-			            <label class="control-label col-lg-2 col-md-2 col-sm-2" for="selectError">Method</label>
-			            <div class="col-lg-4 col-md-4 col-sm-4">
-			              <select id="method" name="method" class="form-control" onchange="method_controller(this)">
+			          
+			        	<section class="col-lg-4 col-md-4 col-sm-6">
+			        		<div >
+			          	<label class="label">Method</label>
+			            
+			            <label class="select" >
+			              <select id="method" name="method" onchange="method_controller(this)" >
 			                <option>Email</option>
 							<option>SMS</option>
 							<option>Voice</option>			                
 			              </select>
-			              
-			            </div>
-          			   </div>
-
-          			  <div class="form-group" id="subject-message-controller">
-			            <label class="control-label col-lg-2" for="input01">Subject</label>
-			            <div class="col-lg-9 col-md-9 col-sm-9">
-			              <input type="text" class="input-xlarge form-control" id="subject" name="subject">
-			              <!--p class="help-block">In addition to freeform text, any HTML5 text-based input appears like so.</p-->
-			            </div>
-			          </div>
-
-			          <div class="form-group" style="display:none" id="sms-message-controller">
-			            <label class="control-label col-lg-2" for="input01">Message</label>
-			            <div class="col-lg-9 col-md-9 col-sm-9">
-			              <input type="text" class="input-xlarge form-control" id="sms_message" name="sms_message">
-			              <!--p class="help-block">In addition to freeform text, any HTML5 text-based input appears like so.</p-->
-			            </div>
-			          </div>
-			          <div class="form-group" id="email-message-controller">
-			            <label class="control-label col-lg-2" for="input01">Message</label>
-			            <div class="col-lg-9 col-md-9 col-sm-9">
-			              <textarea class="input-xlarge form-control" id="message" name="message" style="display:inline;margin:0px"></textarea>
-
-			              <!--p class="help-block">In addition to freeform text, any HTML5 text-based input appears like so.</p-->
-			            </div>
-			          </div>
-			          <div class="form-group" id="attachment-controller">
-			            <label class="control-label col-lg-2" for="input01">Attachment</label>
-			            <div class="col-lg-6 col-md-6 col-sm-6">
-			              <input type="file" class="form-control" id="attachment" name="attachment">
-			              <!--p class="help-block">In addition to freeform text, any HTML5 text-based input appears like so.</p-->
-			            </div>
-			          </div>
-			          
-			          <div class="form-group info">
-			            <label class="control-label col-lg-2 col-md-2 col-sm-2">Type</label>
-			            <div class="col-lg-4 col-md-4 col-sm-4">
-			              <select id="type" name="type" class="form-control" onchange="input_controller(this)">
+			              <i></i>
+			            </label>
+			        </div>
+			        </section>
+          			   
+			        <section class="col-lg-4 col-md-4 col-sm-6">
+			          <div >
+			            <label class="label">Type</label>
+			            <label class="select" >
+			              <select id="type" name="type"onchange="input_controller(this)">
 			                <option>One-Time</option>
 			                <option>Daily</option>
 			                <option>Weekly</option>
 			                <option>Monthly</option>
 			                
 			              </select>
+			              <i></i>
+			          </label>
 			              
 			            </div>
-          			   </div>
+       			   </section>
 
-          			   <div class="form-group" id="date-controller">
-			            <label class="control-label col-lg-2 col-md-2 col-sm-2" for="input01">Date</label>
-			            <div class="col-lg-4 col-md-4 col-sm-4">
-			              <input type="text" class="input-xlarge form-control" id="datepicker" name="datepicker">
+			        	<section>
+          			  <div class="col-lg-9 col-md-9 col-sm-9" id="subject-message-controller">
+			            <label class="label">Subject</label>
+			            <label class="input">
+			              <input type="text" class="input-xlarge form-control" id="subject" name="subject">
 			              <!--p class="help-block">In addition to freeform text, any HTML5 text-based input appears like so.</p-->
+			          </label>
 			            </div>
+			          </section>
+
+			          <section>
+			          <div class="col-lg-9 col-md-9 col-sm-9" style="display:none" id="sms-message-controller">
+			            <label class="label">Message</label>
+			            <label class="input">
+			              <input type="text" class="input-xlarge form-control" id="sms_message" name="sms_message">
+			              <!--p class="help-block">In addition to freeform text, any HTML5 text-based input appears like so.</p-->
+			            </label>
+			          </div>
+			      </section>
+			      <section>
+			          <div class="col-lg-9 col-md-9 col-sm-9" id="email-message-controller">
+			            <label class="label">Message</label>
+			            <label class="textarea">
+			              <textarea class="input-xlarge form-control" id="message" name="message" style="display:inline;margin:0px"></textarea>
+
+			              <!--p class="help-block">In addition to freeform text, any HTML5 text-based input appears like so.</p-->
+			            </label>
+			          </div>
+			      </section >
+			      <section class="col-lg-7 col-md-7 col-sm-7" id="attachment-controller">
+			          <div >
+			          
+			            <label class="label">Attachment</label>
+			            <label for="attachment" class="input input-file">
+			            <div class="button">
+			            
+			              <input type="file" id="attachment" name="attachment" onchange="change_attachment(this.value)">
+			          		Browse
+			              
+			             </div>
+			              <input type="text" readonly id="attachment_name">
+			            
+			        </label>
+			            
 			          </div>
 
-			          <div class="form-group info" id="day-of-week-controller" style="display:none;">
-			            <label class="control-label col-lg-2 col-md-2 col-sm-2">Day Of Week</label>
-			            <div class="col-lg-6 col-md-6 col-sm-6">
+			      </section>
+			          
+			          
+          			   <section id="date-controller">
+          			   <div class="col-lg-6 col-md-6 col-sm-6">
+			            <label class="label">Date</label>
+			            <label class="input">
+			            	<i class="icon-append fa fa-calendar"></i>
+			              <input type="text" id="date" name="date" class="input-xlarge form-control">
+			              <!--p class="help-block">In addition to freeform text, any HTML5 text-based input appears like so.</p-->
+			            </label>
+			          </div>
+			      </section>
+
+			      <section id="day-of-week-controller" style="display:none;">
+			          <div class="col-lg-6 col-md-6 col-sm-6" >
+			            <label class="label">Day Of Week</label>
+			            <label class="select" >
 			              <select id="week-type" name="week-type" class="form-control" >
 			                <option>Monday</option>
 			                <option>Tuesday</option>
@@ -102,13 +134,15 @@
 			                <option>Saturday</option>
 			                <option>Sunday</option>
 			              </select>
+			              <i></i>
 			              
-			            </div>
+			            </label>
           			   </div>
-
-          			   <div class="form-group info" id="day-of-month-controller" style="display:none;">
-			            <label class="control-label col-lg-2 col-md-2 col-sm-2">Day Of Month</label>
-			            <div class="col-lg-4 col-md-4 col-sm-4">
+          			</section>
+          			<section id="day-of-month-controller" style="display:none;">
+          			   <div class="col-lg-6 col-md-6 col-sm-6" >
+			            <label class="label">Day Of Month</label>
+			            <label class="select">
 			              <select id="month-type" name="month-type" class="form-control" >
 			                <option>1</option>
 			                <option>2</option>
@@ -143,34 +177,96 @@
 			                <option>31</option>
 			                
 			              </select>
-			              
-			            </div>
+			              <i></i>
+			            </label>
           			   </div>
+          			</section>
 
-			           <div class="form-group">
-			            <label class="control-label col-lg-2 col-md-2 col-sm-2" for="input01">Time</label>
-			            <div class="col-lg-4 col-md-4 col-sm-4">
+
+          			<section class="col-lg-5 col-md-5 col-sm-5">
+			           <div >
+			            <label class="label">Time</label>
+			            <label class="input" >
 			              <input type="time" id="time" class="form-control" name="time" value="09:00:AM">
 			              
-			            </div>
+			            </label>
 			          </div>
-			          
-          			   
-          			  
-          			   <div class="form-group">
-			            <label class="control-label col-lg-2 col-md-2 col-sm-2" for="input01">Recipient</label>
-			            <div class="col-lg-8 col-md-8 col-sm-8">
-			              <input type="text" class="input-xlarge form-control" id="details" name="details">
-			              <!--p class="help-block">In addition to freeform text, any HTML5 text-based input appears like so.</p-->
-			            </div>
-			          </div>
+			      </section>
+			          <!--<div class="form-group info">
+			            <label class="control-label" for="selectError">Time</label>
+			            <div class="controls">
+			              <select id="time" name="time">
+			                <option>9:00:AM</option>
+			                <option>9:30:AM</option>
+			                <option>10:00:AM</option>
+			                <option>10:30:AM</option>
+			                <option>11:00:AM</option>
+			                <option>11:30:AM</option>
+			                <option>12:00:PM</option>
+			                <option>12:30:PM</option>
+			                <option>1:00:PM</option>
+			                <option>1:30:PM</option>
+			                <option>2:00:PM</option>
+			                <option>2:30:PM</option>
+			                <option>3:00:PM</option>
+			                <option>3:30:PM</option>
+			                <option>4:00:PM</option>
+			                <option>4:30:PM</option>
+			                <option>5:00:PM</option>
+			                <option>5:30:PM</option>
+			                <option>6:00:PM</option>
+			                <option>6:30:PM</option>
+			                <option>7:00:PM</option>
+			                <option>7:30:PM</option>
+			                <option>8:00:PM</option>
+			                <option>8:30:PM</option>
+			                <option>9:00:PM</option>
 
-			          <div class="form-actions">
-			          	<button type="submit" class="btn btn-primary">Submit</button>
+			                
+			              </select>
+			              
+			            </div>
+          			   </div>-->
+          			   
+          			   <!--div class="form-group info">
+			            <label class="control-label col-lg-2 col-md-2 col-sm-2" for="selectError">Timezone</label>
+			            <div class="col-lg-4 col-md-4 col-sm-4">
+			              <select id="timezone" name="timezone" class="form-control" >
+			                <option>IST</option>
+							<option>GMT</option>			                
+			              </select>
+			              
+			            </div>
+          			   </div-->
+          			   <!--div class="form-group info" id="country-code-controller" style="display:none;">
+			            <label class="control-label col-lg-2 col-md-2 col-sm-2" for="selectError">Country Code</label>
+			            <div class="col-lg-6 col-md-6 col-sm-6" >
+			              <select id="country_code" name="country_code" class="form-control" >
+			                <option>+001 (for US)</option>
+							<option>+91 (for India)</option>	                
+			              </select>
+			              
+			            </div>
+          			   </div-->
+          			   <section>
+          			   <div class="col-lg-8 col-md-8 col-sm-8">
+			            <label class="label">Recipient</label>
+			            <label class="input" >
+			              <input type="text" list="list" class="input-xlarge form-control autocomplete" id="details" name="details" placeholder="eg. abc@xyz.com" scoped>
+			              <div class="note" id="recipient-helper">Enter a valid email address eg. abc@xyz.com</div>
+			            </label>
 			          </div>
+			      </section>
+
 
 			      </fieldset>
+			      <footer>
+			          <div class="form-actions">
+			          	<button type="submit" class="btn btn-u">Submit</button>
+			          </div>
+			      </footer>
 			  </form>
+			  <div class="margin-bottom-60"></div>
             </div>
               <div class="col-md-3">
                 <!-- Contacts -->
@@ -194,12 +290,15 @@ $('.jqte').css('margin','0px');
 
 
 
+$("input#details").autocomplete({
+	source: '/options'
+});
 
 $('#form').submit(function(){
 
 
 var message=$('#message').val();
-var date=$('#datepicker').val();
+var date=$('#date').val();
 var recipients=$('#details').val();
 var time=$('#time').val();
 var type=$('#type').val();
@@ -246,11 +345,28 @@ if(type=='Monthly')
 	}	
 }
 
-
+var $details=$(this).find("input[name=details]");
+var recipient=$details.val();
+var lastIndex=recipient.lastIndexOf('<');
+if (lastIndex>=0)
+{
+	var truncated_recipient=recipient.substring(lastIndex+1,recipient.length-1);
+	$details.val(truncated_recipient);
+}
 
 });
-$('#datepicker').datepicker({minDate:new Date()});
+//$('#datepicker').datepicker({minDate:new Date()});
+$('#date').datepicker({
+	            
+	            prevText: '<i class="fa fa-angle-left"></i>',
+	            nextText: '<i class="fa fa-angle-right"></i>',
+	            minDate:new Date()
+	        });
 
+function change_attachment(value)
+{
+	$('#attachment_name').val(value.substring(12));
+}
 function method_controller(obj)
 {
 	var method=obj.value;
@@ -260,6 +376,9 @@ function method_controller(obj)
 		$('#sms-message-controller').css('display','none');
 		$('#subject-message-controller').css('display','');
 		$('#attachment-controller').css('display','');
+		$('#recipient-helper').html('Enter a valid email address eg. abc@xyz.com');
+		//$('#details').attr('type','email');
+		$('#details').attr('placeholder','eg. abc@xyz.com');
 		//$('#country-code-controller').css('display','none');
 	}
 	if(method=='SMS' || method=='Voice')
@@ -268,6 +387,9 @@ function method_controller(obj)
 		$('#email-message-controller').css('display','none');
 		$('#subject-message-controller').css('display','none');
 		$('#attachment-controller').css('display','none');
+		$('#recipient-helper').html('Enter a valid phone number eg. 9830906922 or +919830906922 without "-"');
+		$('#details').attr('type','text');
+		$('#details').attr('placeholder','eg. 9830906922');
 		//$('#country-code-controller').css('display','');
 	}
 }
