--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
   <!--[if lt IE 9]>
 <script src="dist/html5shiv.js"></script>
 <![endif]-->
-   <link rel="stylesheet" href="https://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+   <!--link rel="stylesheet" href="https://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" /-->
   <!--link rel="stylesheet" href="https://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" /--> 
 
   <!--script src="http://code.jquery.com/jquery-1.11.0.min.js"></script-->
